--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "coveralls": "^3.1.1",
+    "mocha-lcov-reporter": "^1.3.0"
+  }
 }
