--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no tests are implemented yet \" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "coveralls": "^3.1.1",
     "mocha-lcov-reporter": "^1.3.0"
+  },
+  "dependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0"
   }
 }
