--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "mocha",
-    "test-coverage": "echo No have!"
+    "test-coverage": "c8 --reporter=lcov mocha"
   },
   "author": "",
   "license": "MIT",
@@ -15,6 +15,7 @@
     "mocha-lcov-reporter": "^1.3.0"
   },
   "dependencies": {
+    "c8": "^7.12.0",
     "chai": "^4.3.7",
     "mocha": "^10.2.0"
   }
